fix: hoping to fix filter wrappings

--- a/styles/teachpress_front.css
+++ b/styles/teachpress_front.css
@@ -116,3 +116,12 @@ li.tp_cite_entry {font-size:0.9rem;}
 .tp_lvs_name {font-size:14px;}
 td.tp_lvs_container {margin:5px; border-bottom:1px solid silver; border-right:1px solid silver; padding:7px 5px 7px 5px;}
 .tp_lvs_comments {padding-top:5px; margin:0; min-height:17px;}
+
+		
+div.techpress_filter {	
+    display: flex;	
+    flex-wrap: wrap;	
+}	
+div.techpress_filter select {	
+    flex: 1;	
+}
